--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Sanchez&display=swap');
 
 :root {
-    /* Colors */
+    /* Colores */
     --primary-bg-color: #DDCEB5;
     --secondary-bg-color: #c2b7a4;
     --text-color: #332E2B;
     --text-secondary-color: #616161;
 
-    /* Fonts */
+    /* Fuentes */
     --sanchezfont: 'Sanchez', serif;
     --abrilfont: 'Abril Fatface', cursive;
 
-    /* Font Sizes */
+    /* Tamanio Fuentes */
     --title-font-size: 40px;
     --subtitle-font-size: 30px;
     --heading-font-size: 50px;
@@ -218,13 +218,13 @@ a {
     display: grid;
 }
 
-.certifica table {
+table {
     text-align: justify;
     font-family: var(--sanchezfont);
     padding: var(--padding-large);
 }
 
-.certifica table th {
+table th {
     background-color: var(--text-color);
     color: var(--secondary-bg-color);
 }
@@ -236,16 +236,25 @@ a {
 
 .formu form {
     display: flex;
+    width: 536px;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
     padding: var(--padding-large);
     margin-top: var(--margin-large);
     margin-bottom: var(--margin-large);
+    align-items: center;
+    font-family: var(--sanchezfont);
 }
 
 .cont form input {
     margin-top: var(--margin-large);
     font-family: var(--sanchezfont);
+}
+
+.cont form input[type="submit"]{
+    background-color: #050505;
+    color: #DDCEB5;
+    width: 100px;
 }
 
 .propio p::first-letter {
@@ -282,4 +291,14 @@ footer p {
     z-index: 100;
     font-family: Arial;
     font-size: 50px;
+}
+
+.tabla{
+    display: flex;
+    flex-direction: column;
+}
+
+.tabla td, .tabla th{
+    text-align: center;
+    border: 1px solid;
 }
